examples/negative/patterns/guard_not_bool.kai
# Negative fixture (#520 / patterns): a match guard is an
# expression of type `Int`, not `Bool`. Typer must reject with
# "type mismatch in match guard".

fn f(x: Int) : Int = match x {
  n if 1 -> 1
  _      -> 0
}

fn main() : Int = f(0)
